# mesh-supervisor

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  flake.nix  lefthook.yml
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
src/: cgroup.rs  cli.rs  client.rs  commands.rs  config.rs  endpoint.rs  lib.rs  main.rs  process.rs  proto.rs  ratelimit.rs  sandbox.rs  store.rs  supervisor.rs  telemetry.rs
tests/: isolation.rs  loopback.rs  namespaces.rs  persistence.rs  restart.rs
