[package]
name = "mesh-supervisor"
version = "0.1.0"
edition = "2024"
description = "Distributed process control and telemetry over an iroh (QUIC) P2P mesh"
repository = "https://github.com/cbass-d/mesh-supervisor"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["p2p", "iroh", "supervisor", "process", "telemetry"]
categories = ["command-line-utilities", "network-programming"]
# Distributed via GitHub Releases, not crates.io; drop this to publish there.
publish = false

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.5"
bytes = "1.12.0"
clap = { version = "4.6.1", features = ["env"] }
clap_complete = "4.6.7"
iroh = "1.0.0"
iroh-gossip = "0.101.0"
iroh-mdns-address-lookup = "0.4.0"
n0-future = "0.3.2"
nix = { version = "0.31.3", features = ["signal", "resource", "process"] }
parking_lot = "0.12.5"
postcard = { version = "1.1.3", features = ["use-std"] }
redb = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
